// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <ChartArea
        dataSets={
          Array [
            Object {
              "animate": Object {
                "duration": 250,
                "onLoad": Object {
                  "duration": 250,
                },
              },
              "data": Array [],
              "fill": "#8bc1f7",
              "id": "sockets",
              "isStacked": true,
              "legendLabel": "t('curiosity-graph.rhelLegendSocketsLabel')",
              "stroke": "#004b95",
            },
            Object {
              "animate": Object {
                "duration": 250,
                "onLoad": Object {
                  "duration": 250,
                },
              },
              "data": Array [],
              "fill": "#a2d9d9",
              "id": "hypervisor",
              "isStacked": true,
              "legendLabel": "t('curiosity-graph.rhelLegendHypervisorLabel')",
              "stroke": "#005f60",
            },
            Object {
              "animate": Object {
                "duration": 100,
                "onLoad": Object {
                  "duration": 100,
                },
              },
              "data": Array [],
              "id": "threshold",
              "isThreshold": true,
              "legendLabel": "t('curiosity-graph.rhelLegendThresholdLabel')",
              "themeColor": "green",
            },
          ]
        }
        domain={Object {}}
        height={275}
        padding={
          Object {
            "bottom": 75,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        themeColor="blue"
        tooltips={[Function]}
        xAxisFixLabelOverlap={true}
        xAxisLabelIncrement={5}
        xAxisTickFormat={[Function]}
        yAxisTickFormat={[Function]}
      />
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: error shows zeroed bar values 1`] = `
Object {
  "chartBarData": Array [
    Object {
      "animate": Object {
        "duration": 250,
        "onLoad": Object {
          "duration": 250,
        },
      },
      "data": Array [
        Object {
          "date": 2019-06-01T00:00:00.000Z,
          "x": 0,
          "y": 10,
        },
        Object {
          "date": 2019-06-08T00:00:00.000Z,
          "x": 1,
          "y": 12,
        },
        Object {
          "date": 2019-06-25T00:00:00.000Z,
          "x": 2,
          "y": 3,
        },
      ],
      "fill": "#8bc1f7",
      "id": "sockets",
      "isStacked": true,
      "legendLabel": "t('curiosity-graph.rhelLegendSocketsLabel')",
      "stroke": "#004b95",
    },
    Object {
      "animate": Object {
        "duration": 250,
        "onLoad": Object {
          "duration": 250,
        },
      },
      "data": undefined,
      "fill": "#a2d9d9",
      "id": "hypervisor",
      "isStacked": true,
      "legendLabel": "t('curiosity-graph.rhelLegendHypervisorLabel')",
      "stroke": "#005f60",
    },
    Object {
      "animate": Object {
        "duration": 100,
        "onLoad": Object {
          "duration": 100,
        },
      },
      "data": undefined,
      "id": "threshold",
      "isThreshold": true,
      "legendLabel": "t('curiosity-graph.rhelLegendThresholdLabel')",
      "themeColor": "green",
    },
  ],
}
`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <ChartArea
        dataSets={
          Array [
            Object {
              "animate": Object {
                "duration": 250,
                "onLoad": Object {
                  "duration": 250,
                },
              },
              "data": Array [
                Object {
                  "date": 2019-06-01T00:00:00.000Z,
                  "x": 0,
                  "y": 10,
                },
                Object {
                  "date": 2019-06-08T00:00:00.000Z,
                  "x": 1,
                  "y": 12,
                },
                Object {
                  "date": 2019-06-25T00:00:00.000Z,
                  "x": 2,
                  "y": 3,
                },
              ],
              "fill": "#8bc1f7",
              "id": "sockets",
              "isStacked": true,
              "legendLabel": "t('curiosity-graph.rhelLegendSocketsLabel')",
              "stroke": "#004b95",
            },
            Object {
              "animate": Object {
                "duration": 250,
                "onLoad": Object {
                  "duration": 250,
                },
              },
              "data": undefined,
              "fill": "#a2d9d9",
              "id": "hypervisor",
              "isStacked": true,
              "legendLabel": "t('curiosity-graph.rhelLegendHypervisorLabel')",
              "stroke": "#005f60",
            },
            Object {
              "animate": Object {
                "duration": 100,
                "onLoad": Object {
                  "duration": 100,
                },
              },
              "data": undefined,
              "id": "threshold",
              "isThreshold": true,
              "legendLabel": "t('curiosity-graph.rhelLegendThresholdLabel')",
              "themeColor": "green",
            },
          ]
        }
        domain={Object {}}
        height={275}
        padding={
          Object {
            "bottom": 75,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        themeColor="blue"
        tooltips={[Function]}
        xAxisFixLabelOverlap={true}
        xAxisLabelIncrement={5}
        xAxisTickFormat={[Function]}
        yAxisTickFormat={[Function]}
      />
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      CPU socket usage
    </h2>
    <CardActions>
      <Select
        aria-label="Select date range"
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Daily",
              "value": "daily",
            },
            Object {
              "title": "Weekly",
              "value": "weekly",
            },
            Object {
              "title": "Monthly",
              "value": "monthly",
            },
            Object {
              "title": "Quarterly",
              "value": "quarterly",
            },
          ]
        }
        placeholder="Select date range"
        selectedOptions="daily"
        variant="single"
      />
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <Skeleton
        isDark={false}
        size="xs"
      />
      <Skeleton
        isDark={false}
        size="sm"
      />
      <Skeleton
        isDark={false}
        size="md"
      />
      <Skeleton
        isDark={false}
        size="lg"
      />
    </div>
  </CardBody>
</Card>
`;
